added a few tests for property dependency map and cleaned up and refactored a lot

--- a/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
+++ b/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="NotifyPropertyChangedAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyDependency.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
