--- a/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
+++ b/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
@@ -44,9 +44,17 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NotifyPropertyChangedAttribute_Tests.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\When_I_set_an_AutoProperty_MoreThanOnceInTheSamePublicMethod.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\When_I_set_a_PropertyWithBackingField.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\When_I_set_an_AutoProperty_that_has_a_NestedDependentProperty.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\When_I_set_an_AutoProperty_that_has_a_DependentProperty.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\When_I_set_an_AutoProperty.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute\PublicInstanceMethods.cs" />
     <Compile Include="NUnitAssertionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyDependency\When_I_create_a_PropertyDependencyMapFrom_a_simple_cyclic_PropertyDependencyGraph.cs" />
+    <Compile Include="PropertyDependency\When_I_create_a_PropertyDependencyMapFrom_a_simple_acyclic_PropertyDependencyGraph_with_a_dependent_property_that_is_not_in_the_map.cs" />
+    <Compile Include="PropertyDependency\When_I_create_a_PropertyDependencyMapFrom_a_simple_acyclic_PropertyDependencyGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,6 +65,7 @@
       <Name>PostSharp.NotifyPropertyChanged</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\PostSharp.2.1.4.1\tools\PostSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
