--- a/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
+++ b/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
@@ -33,22 +33,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PostSharp, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
-      <HintPath>..\packages\PostSharp.2.1.4.1\lib\net20\PostSharp.dll</HintPath>
+      <HintPath>..\..\packages\PostSharp.2.1.4.1\lib\net20\PostSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NotifyPropertyChangedAttribute.cs" />
+    <Compile Include="..\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute.cs" />
     <Compile Include="PropertyDependency.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\PostSharp.2.1.4.1\tools\PostSharp.targets" />
+  <Import Project="..\..\packages\PostSharp.2.1.4.1\tools\PostSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
