--- a/source/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
+++ b/source/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
@@ -42,12 +42,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionAssemblyInfo.cs">
       <Link>Properties\SolutionAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="NotifyPropertyChangedAttribute_Cascading_Tests\When_I_set_an_ObservedProperty_on_a_ObservedClass.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute_Cascading_Tests\When_I_modify_an_ObservedCollection.cs" />
+    <Compile Include="NotifyPropertyChangedAttribute_Cascading_Tests\When_I_set_an_ObservedProperty_on_an_ObservedReference.cs" />
     <Compile Include="NotifyPropertyChangedAttribute_Tests\When_I_set_a_NonPublicAutoProperty.cs" />
     <Compile Include="NotifyPropertyChangedAttribute_Tests\When_I_set_an_AutoProperty_that_has_a_CalculatedProperty_from_a_DependentMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,7 +70,9 @@
       <Name>PostSharp.NotifyPropertyChanged</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\PostSharp.2.1.6.14\tools\PostSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
