--- a/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
+++ b/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
@@ -36,8 +36,10 @@
     <Reference Include="PostSharp, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>..\..\packages\PostSharp.2.1.6.14\lib\net20\PostSharp.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionAssemblyInfo.cs">
