--- a/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
+++ b/source/PostSharp.NotifyPropertyChanged/PostSharp.NotifyPropertyChanged.csproj
@@ -45,8 +45,9 @@
     <Compile Include="..\SolutionAssemblyInfo.cs">
       <Link>Properties\SolutionAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="NotifyObservedCollectionChangedAttribute.cs" />
     <Compile Include="NotifyPropertyChangedAttribute.cs" />
-    <Compile Include="CascadeingAttribute.cs" />
+    <Compile Include="NotifyObservedReferenceChangedAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyDependencyMap.cs" />
     <Compile Include="ReflectionExtensions.cs" />
