--- a/source/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
+++ b/source/PostSharp.NotifyPropertyChanged.Tests/PostSharp.NotifyPropertyChanged.Tests.csproj
@@ -48,9 +48,11 @@
       <Link>Properties\SolutionAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="NotifyObservedCollectionChangedAttribute_Tests\When_I_modify_an_ObservedCollection.cs" />
+    <Compile Include="NotifyObservedReferenceChangedAttribute_Tests\When_I_set_an_ObservedProperty_on_an_ObservedInterface.cs" />
     <Compile Include="NotifyObservedReferenceChangedAttribute_Tests\When_I_set_an_ObservedProperty_on_an_ObservedReference.cs" />
     <Compile Include="NotifyPropertyChangedAttribute_Tests\When_I_set_a_NonPublicAutoProperty.cs" />
     <Compile Include="NotifyPropertyChangedAttribute_Tests\When_I_set_an_AutoProperty_that_has_a_CalculatedProperty_from_a_DependentMethod.cs" />
+    <Compile Include="NotifyPropertyChangedExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NUnitAssertionExtensions.cs" />
     <Compile Include="NotifyPropertyChangedAttribute_Tests\When_I_set_an_AutoProperty_MoreThanOnceInTheSamePublicMethod.cs" />
@@ -68,9 +70,6 @@
       <Project>{8A9AE777-F113-4DFE-A448-3F575E0D5E31}</Project>
       <Name>PostSharp.NotifyPropertyChanged</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\PostSharp.2.1.6.14\tools\PostSharp.targets" />
